--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            testando...
+            <p>Número: <input type="number" name="num " id="txtn"></p>
+            <p><input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div>
-            Olá!
-        </div>        
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima:</option>
+            </select>
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVídeo</p>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
